Youtube-Clone/kubernetes/overlays/development/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: youtube-clone
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: youtube-clone
        imagePullPolicy: Never
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "200m"
